2005-10-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1487
	* ld-ia64/tlspic.rd: Updated.

2005-10-21  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1467
	* ld-elf/orphan.d: New file.
	* ld-elf/orphan.ld: Likewise.
	* ld-elf/orphan.s: Likewise.

2005-10-20  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-ia64/ia64.exp: Undo the last change. Add support for *.d.

	* ld-ia64/link-order.d: New file.

2005-10-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/251
	* ld-elf/group.2d: New file.

2005-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1487
	* ld-elf/unknown.d: New file.

2005-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-ia64/ia64.exp: Check link order for ld -r.

2005-10-18  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/crossref.exp: Add -mcall-aixdesc to CFLAGS for
	powerpc64.

2005-10-13 Mark Mitchell  <mark@codesourcery.com>

	* ld-elfvers/vers.exp: Add vers31.
	* ld-elfvers/vers31.c: New file.
	* ld-elfvers/vers31.dsym: Likewise.
	* ld-elfvers/vers31.map: Likewise.
	* ld-elfvers/vers31.ver: Likewise.

2005-10-08  Paul Brook  <paul@codesourcery.com>

	* ld-arm/arm-rel31.d: Ignore Arm object attribute sections.
	* ld-arm/arm-target1-abs.d: Ditto.
	* ld-arm/arm-target1-rel.d: Ditto.
	* ld-arm/arm-target2-abs.d: Ditto.
	* ld-arm/arm-target2-got-rel.d: Ditto.
	* ld-arm/arm-target2-rel.d: Ditto.

2005-10-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/1396
	* ld-scripts/cross3.t: New file.
	* ld-scripts/cross4.c: Likewise.

	* ld-scripts/crossref.exp: Add a new test for "ld -r".

2005-09-30  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/sec64k.exp: Enabled for all ELF targets.

2005-09-30  Catherine Moore  <clm@cm00re.com>

	* ld-elf/merge.d: Xfail bfin.

2005-09-28  Alexandre Oliva  <aoliva@redhat.com>

	* symtocbase-1.s, symtocbase-2.s, symtocbase.d: New test.
	* powerpc.exp: Run it.

2005-09-28  Jan Beulich  <jbeulich@novell.com>

	* ld-x86-64/tlspic.dd: Adjust.

2005-09-01  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris: Skip tests unsuitable for testing target
	cris-axis-linux-gnu.